fixed issues with scroll on small devices

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  background-color: black;
 }
 .headingdeco {
   font-family: cursive;
@@ -13,6 +14,9 @@ body {
 .ing {
   text-align: left;
   color: white;
+}
+.dish-list {
+  padding-left: 0px;
 }
 
 .item {
